--- a/finalproject.html
+++ b/finalproject.html
@@ -125,7 +125,7 @@ text-align: center;
   <div class="container">
   <div class="row">
     <div class="col-5">
-      <img src="images/mock_ipad.jpg" class="img-fluid">
+      <img src="mock_ipad.jpg" class="img-fluid">
       
     </div>
     <div class="col-7">
@@ -156,7 +156,7 @@ text-align: center;
       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="col-7"> 
- <img src="images/mock_nexus.jpg" class="img-fluid">
+ <img src="mock_nexus.jpg" class="img-fluid">
     </div>
   </div>
 </div>
@@ -250,17 +250,17 @@ text-align: center;
   <div class="container">
   <div class="row">
     <div class="col-4">
-      <img src="images/jon.png" class="rounded">
+      <img src="jon.png" class="rounded">
       <h5>Jon</h5>
       <p>Software Engineer</p>
     </div>
     <div class="col-4">
-      <img src="images/jon.png" style="border-radius: 50%;">
+      <img src="jon.png" style="border-radius: 50%;">
       <h5>Mike</h5>
       <p>CEO</p>
     </div>
     <div class="col-4">
-      <img src="images/jon.png" class="img-thumbnail">
+      <img src="jon.png" class="img-thumbnail">
       <h5>Micky</h5>
       <p>CFO</p>
     </div>
@@ -296,7 +296,7 @@ text-align: center;
     <div class="row">
       <!--Grid column-->
       <div class="col-sm ">
-        <img src="images/logo.png" width="200">
+        <img src="logo.png" width="200">
       </div>
       <!--Grid column-->
 
